@@ -30,6 +30,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #14269: SMTPD now conforms to the RFC and requires a HELO command
+  before MAIL, RCPT, or DATA.
+
 - Issue #13694: asynchronous connect in asyncore.dispatcher does not set addr
   attribute.
 
